Changed the default result to zero

--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
       <div class="main-card">
         <header class="heading">Your Result</header>
         <div class="score-display">
-          <div class="marks-scored">76</div>
+          <div class="marks-scored">0</div>
           <div class="total-marks">of 100</div>
         </div>
-        <div class="grade">Great</div>
+        <div class="grade">-</div>
         <div class="description">
-          You scored higher than <span class="percentile">65</span>% of the people who have taken these tests.
+          You scored higher than <span class="percentile">0</span>% of the people who have taken these tests.
         </div>
       </div>
       <div class="card-summary">
@@ -32,7 +32,7 @@
             <img src="./Images/icon-reaction.svg" alt="Reaction">
             <div class="performance-head">Reaction</div>
             <div class="performance-score">
-              <span class="marks" id="reactionScore">80</span><span class="out-of">/</span
+              <span class="marks" id="reactionScore">0</span><span class="out-of">/</span
               ><span class="hundred">100</span>
             </div>
           </div>
@@ -40,7 +40,7 @@
             <img src="./Images/icon-memory.svg" alt="Memory">
             <span class="performance-head">Memory</span>
             <span class="performance-score"
-              ><span class="marks" id="memoryScore">92</span><span class="out-of">/</span
+              ><span class="marks" id="memoryScore">0</span><span class="out-of">/</span
               ><span class="hundred">100</span></span
             >
           </div>
@@ -48,7 +48,7 @@
             <img src="./Images/icon-verbal.svg" alt="Verbal">
             <span class="performance-head">Verbal</span>
             <span class="performance-score"
-              ><span class="marks" id="verbalScore">61</span><span class="out-of">/</span
+              ><span class="marks" id="verbalScore">0</span><span class="out-of">/</span
               ><span class="hundred">100</span></span
             >
           </div>
@@ -56,7 +56,7 @@
             <img src="./Images/icon-visual.svg" alt="Visual">
             <span class="performance-head">Visual</span>
             <span class="performance-score"
-              ><span class="marks" id="visualScore">72</span><span class="out-of">/</span
+              ><span class="marks" id="visualScore">0</span><span class="out-of">/</span
               ><span class="hundred">100</span></span
             >
           </div>
